[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Bullet/Bullet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Projectile/Bullet.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Projectile/Trail.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.45634, 1.41533 )

[node name="Bullet" type="Area2D"]
collision_layer = 6
collision_mask = 6
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Trail" parent="." instance=ExtResource( 3 )]
trail_parent = NodePath("..")
[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="tree_exiting" from="." to="." method="_on_Bullet_tree_exiting"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
